fix: update test classes to compile against new demographic merge API